# haskell-template

./: README.md  haskell-template.cabal  test.hs
src/: main.hs
